2014-06-25  Brent Fulgham  <bfulgham@apple.com>

        [Win] Whoops! DirectX SDK is still needed.

        * building/tools.html: Put DirectX instruction back.

2014-06-24  Brent Fulgham  <bfulgham@apple.com>

        [Win] Remove some out-of-date stuff from our instructions.
        https://bugs.webkit.org/show_bug.cgi?id=134282

        Reviewed by Tim Horton.

        * building/build.html: Remove reference to "Platform SDK" which we don't manuall 
        install anymore (it's part of Visual Studio 2013).
        * building/tools.html: We no longer need QuickTime SDK, QuickTime Player, or
        the DirectX SDK.

2014-06-23  Ryosuke Niwa  <rniwa@webkit.org>

        Drop the cross organizational support requirement from reviewer nomination policy
        https://bugs.webkit.org/show_bug.cgi?id=134240

        Reviewed by Gyuyoung Kim.

        Removed.

        * coding/commit-review-policy.html:

2014-05-13  Filip Pizlo  <fpizlo@apple.com>

        Updated the files to have the right width.

        * blog-files/ftl-jit/dfg_pipeline.png:
        * blog-files/ftl-jit/four_tier_performance.png:
        * blog-files/ftl-jit/ftl_asm_bench_performance.png:
        * blog-files/ftl-jit/ftl_pipeline.png:
        * blog-files/ftl-jit/ftl_timeline.png:
        * blog-files/ftl-jit/polymorphic_inlining_performance.png:
        * blog-files/ftl-jit/polyvariance.png:
        * blog-files/ftl-jit/polyvariant_devirtualization_performance.png:
        * blog-files/ftl-jit/three_tier_performance.png:

2014-05-13  Filip Pizlo  <fpizlo@apple.com>

        Add some illustrations about how JSC works.

        * blog-files/ftl-jit: Added.
        * blog-files/ftl-jit/dfg_pipeline.png: Added.
        * blog-files/ftl-jit/four_tier_performance.png: Added.
        * blog-files/ftl-jit/ftl_asm_bench_performance.png: Added.
        * blog-files/ftl-jit/ftl_pipeline.png: Added.
        * blog-files/ftl-jit/ftl_timeline.png: Added.
        * blog-files/ftl-jit/object_model.png: Added.