@@ -81,11 +81,6 @@ Those lines would prevent picking up the Windows TMP and TEMP environment variab
 Follow the instructions on the <a href="http://trac.webkit.org/wiki/BuildingGtk">BuildingGTK</a> wiki page.
 </div>
 
-<div class="qt-instructions">
-<h4>QT</h4>
-Follow the instructions on the <a href="http://trac.webkit.org/wiki/QtWebKit">QtWebKit</a> wiki page.
-</div>
-
 <div class="efl-instructions">
 <h4>EFL</h4>
 Follow the instructions on the <a href="http://trac.webkit.org/wiki/EFLWebKit">EFLWebKit</a> wiki page.
