@@ -1,3 +1,15 @@
+2014-06-26  Vivek Galatage  <vivek.vg@samsung.com>
+
+        Remove Qt instructions from http://www.webkit.org/building/tools.html 
+        https://bugs.webkit.org/show_bug.cgi?id=134384
+
+        Reviewed by Tim Horton.
+
+        * building/tools.html:
+        * css/main.css:
+        (.mac-instructions, .unix-instructions, .windows-instructions, .gtk-instructions, .efl-instructions):
+        (.mac-instructions, .unix-instructions, .windows-instructions, .gtk-instructions, .qt-instructions, .efl-instructions): Deleted.
+
 2014-06-25  Brent Fulgham  <bfulgham@apple.com>
 
         [Win] Whoops! DirectX SDK is still needed.
